# azure-healthcare-digital-quality-cql-sdk

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.speckit/: constitution.md  specification.md
docs/: architecture.md  development.md  fabric.md  packaging.md  public-api.md
examples/fhir_bundle_execution/: run.py
examples/hello_world/: HelloWorld.elm.json  run.py
examples/spark_demo/: run.py
fabric/: environment.yml
scripts/: bootstrap.ps1  bootstrap.sh  build-fabric-package.ps1  build-fabric-package.sh  smoke_cql_measures.py  smoke_cql_to_elm.py
src/cql_sdk/: __init__.py  api.py  version.py
src/cql_sdk/abstractions/: __init__.py  data_source.py  invocation.py  operators.py  packaging.py  terminology.py  type_conversion.py
src/cql_sdk/cli/: __init__.py  main.py
src/cql_sdk/cli/commands/: compile.py  inspect.py  package.py  run.py  validate.py
src/cql_sdk/compiler/: __init__.py  bindings.py  expression_builder.py  planner.py  type_manager.py
src/cql_sdk/compiler/cql_to_elm/: __init__.py  ast.py  errors.py  lexer.py  parser.py  translator.py
src/cql_sdk/dqm/: __init__.py  measure.py  model_info.py  package.py  results.py  scoring.py
src/cql_sdk/elm/: __init__.py
src/cql_sdk/elm/models/: __init__.py  base.py  expressions.py  library.py  types.py
src/cql_sdk/elm/serialization/: __init__.py  compatibility.py  json_codec.py  loader.py
src/cql_sdk/fhir/: __init__.py  adapters.py  context.py  helpers.py  retrieve.py  terminology.py  type_conversion.py
src/cql_sdk/invocation/: __init__.py  cache.py  invoker.py  library_registry.py  toolkit.py
src/cql_sdk/packaging/: __init__.py  bundle_writer.py  library_package.py  manifest.py  resource_writer.py
src/cql_sdk/runtime/: __init__.py  comparers.py  context.py  datetime_types.py  definitions.py  intervals.py  operators.py  quantities.py
src/cql_sdk/spark/: __init__.py  adapters.py  execution.py  session.py  udf.py
tests/: conftest.py
tests/fixtures/cql/: __init__.py
tests/fixtures/elm/: hello_world.py
tests/fixtures/valuesets/: PROVENANCE.md  advanced-illness.json  blood-transfusion.json  delivery-encounter.json  delivery-procedures.json  diabetes.json  dialysis-services.json  eclampsia.json  end-stage-renal-disease.json  essential-hypertension.json  frailty.json  gestational-age-20-weeks.json  hba1c-laboratory-test.json  hospice-care.json  hysterectomy.json  icu-admission.json  kidney-transplant.json  mechanical-ventilation.json  outpatient-encounter.json  pregnancy.json  present-on-admission.json  severe-maternal-morbidity-diagnoses.json  severe-maternal-morbidity-procedures.json
tests/integration/: test_api_end_to_end.py  test_cql_to_elm_measures.py  test_spark_smoke.py
tests/unit/: test_cql_lexer.py  test_cql_parser.py  test_cql_translator.py  test_dqm.py  test_invocation.py  test_loader.py  test_runtime_operators.py
