[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ms-cql-sdk"
version = "0.4.3"
description = "Modular Python CQL SDK (ELM loading, runtime, invocation, FHIR and Spark adapters)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "cql-sdk authors" }]
keywords = ["cql", "elm", "fhir", "healthcare", "quality-measures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
fhir = [
    "fhir.resources>=7.1",
]
spark = [
    "pyspark>=3.5",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "build>=1.2",
    "pre-commit>=3.7",
]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
cql-sdk = "cql_sdk.cli.main:app"

[project.urls]
Homepage = "https://github.com/microsoft/azure-healthcare-digital-quality-cql-sdk"
Documentation = "https://github.com/microsoft/azure-healthcare-digital-quality-cql-sdk#readme"
Source = "https://github.com/microsoft/azure-healthcare-digital-quality-cql-sdk"
Issues = "https://github.com/microsoft/azure-healthcare-digital-quality-cql-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cql_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

# -------- Tooling --------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "SIM",               # simplify
    "RUF",               # ruff rules
    "D",                 # pydocstyle
    "TID",               # tidy-imports
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D203", "D213",
    "B008",  # Typer uses call-in-default as its canonical pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "E501"]
"examples/**" = ["D"]
"src/cql_sdk/elm/serialization/loader.py" = ["E501"]
"src/cql_sdk/packaging/library_package.py" = ["E501"]
"src/cql_sdk/spark/session.py" = ["E501"]
"src/cql_sdk/runtime/context.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pyspark.*", "fhir.resources.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: end-to-end ELM loading / invocation tests",
    "spark: requires pyspark (install with `uv sync --extra spark`)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pyspark.*",
]

[tool.coverage.run]
branch = true
source = ["cql_sdk"]

[tool.coverage.report]
show_missing = true
skip_empty = true
